# kythera-rs-starter

./: .gitignore  Cargo.toml  README.md  create-actor.sh
actors/hello-world/: Cargo.toml
actors/hello-world/src/: actor.rs  lib.rs
actors/whitelist/: Cargo.toml
actors/whitelist/src/: actor.rs  lib.rs  utils.rs
build-helper/: Cargo.toml  build.rs
build-helper/src/: README.md
templates/actor/: Cargo.toml
templates/actor/src/: actor.rs  utils.rs
templates/test/: Cargo.toml
templates/test/src/: actor.rs
tests/hello-world-test/: Cargo.toml
tests/hello-world-test/src/: actor.rs
tests/whitelist-test/: Cargo.toml
tests/whitelist-test/src/: actor.rs  utils.rs
