[package]
name = "<actor-name>"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cid = { version = "0.8.5", default-features = false }
frc42_dispatch = "3.1.0"
fvm_sdk = {  version = "3.0.0" }
fvm_shared = {  version = "3.1.0" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = {  version = "0.3.3" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }

[lib]
crate-type = ["cdylib"]